--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.chatWindow{
+  width:300px;
+  height: 100%;
+  position: fixed;
+  background-color: #E0F2F1 ;
+  padding-left: 10px;
 }
