--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,8 @@
   background-color: #E0F2F1 ;
   padding-left: 10px;
 }
+.chat_body{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap
+}
