--- a/src/ChatBox/index.css
+++ b/src/ChatBox/index.css
@@ -29,5 +29,5 @@
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #D62929;
+	background-color: #c0c0c0;
 }
