--- a/src/ChatBox/index.css
+++ b/src/ChatBox/index.css
@@ -1,6 +1,8 @@
 .textbox{
     bottom: 0px;
-    position: fixed;
+    position: fixed;   
+    padding-left: 10px
+
 }
 .conversation{
     overflow-y: auto;
@@ -8,26 +10,30 @@
     width:100%;
     height:calc(100% - 95px);
     overflow-y: auto;
+    background-image: url("./images/chat-bg.jpg");
+    background-size: contain 
 }
 .clear-fix{
     padding-right: 10px
 }
 #style-2::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
 	background-color: #F5F5F5;
+    visibility: hidden
 }
 
 #style-2::-webkit-scrollbar
 {
-	width: 12px;
+	width: 8px;
 	background-color: #F5F5F5;
 }
 
 #style-2::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #c0c0c0;
+	background-color: #e1e1e1;
+}
+.chatWindow{
+    padding-left: 0px !important;
 }
