--- a/src/Dashboard/index.css
+++ b/src/Dashboard/index.css
@@ -34,3 +34,15 @@
     height: 100%;
     width: 100%;
 }
+.info_footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 49px;
+    background-color: #BDBDBD !important;
+}
+.next-button{
+    margin-top: 6px;
+    margin-right: 24vw;
+    float: right;
+}
